# ParallelLabs

./: CMakeLists.txt  conanfile.txt
Exam/: CMakeLists.txt
Exam/src/: main.cpp
Lab1/: CMakeLists.txt  Untitled.ipynb
Lab1/scripts/: build_graphs.py
Lab1/src/: main.cpp
Lab2/: CMakeLists.txt
Lab2/src/: main.cpp
Lab3/: CMakeLists.txt
Lab3/src/: main.cpp
Lab4/: CMakeLists.txt
Lab4/src/: main.cpp
Lab5/: CMakeLists.txt
Lab5/src/: client.cpp  common.hpp  main.cpp  server.cpp
Lib/: CMakeLists.txt  matrix.hpp
tests/: CMakeLists.txt  test_matrix.cpp
